data/raw_logs/syntactic/syn_21.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_21.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_21.c:1:32: error: expected expression before ',' token
    1 | int main() { int a[5] = {1, 2, , 4}; }
      |                                ^
